--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vkahara/fullstackopen-part3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0"
